# blog-rocket-with-diesel

./: .env  .env.example  Cargo.toml  README.md
api/: Cargo.toml
api/src/: authors_handler.rs  cors.rs  general_handler.rs  lib.rs  post_handler.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/authors/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/post/: create.rs  delete.rs  mod.rs  publish.rs  read.rs  update.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/migrations/2024-10-06-002658_create_posts/: up.sql
infrastructure/migrations/2024-10-08-181346_alter_posts/: down.sql  up.sql
infrastructure/migrations/2024-10-09-182256_authors_table/: up.sql
infrastructure/migrations/2024-10-09-182512_add_authors_fk_to_posts/: down.sql  up.sql
infrastructure/migrations/2024-11-01-141534_add_dummy_data_to_posts/: down.sql  up.sql
infrastructure/src/: db_pool.rs  lib.rs
shared/src/: response_models.rs
