[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }

rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde_json = "1.0.128"
rocket-validation = "0.2.0"

