[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.2.4", features = ["postgres", "chrono", "time"] }
serde_json = "1.0.128"
rocket = { version = "0.5.1", features = ["json"] }
