[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.2.4", features = ["postgres", "chrono", "time"] }
serde_json = "1.0.128"
rocket = { version = "0.5.1", features = ["json"] }
validator = { version = "0.16", features = ["derive"] }
serde_derive = "1.0.210"
serde_valid = "0.25.0"
rocket-validation = "0.2.0"
